<resources>
    <string name="app_name">Blume</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="update_info">Update Info</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">SlideShow</string>
    <string name="menu_flower_detail">Flower Detail</string>
    <string name="menu_view_orders">View Orders</string>
    <string name="menu_cart">Cart</string>
    <string name="sign_out">Sign out</string>
    <string name="menu_flower_list">Flower List</string>
    <string name="menu_subscribe_news">News</string>

    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="menu_menu">Categories</string>
    <string name="add_on">Addon</string>
    <string name="action_clear_cart">Clear Cart</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD7C2sZZXBtVKb-DfVDPmc-tbRQXSmTY_Q</string>
    <string name="title_activity_tracking_order">Map</string>

</resources>