<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.company.blumeSunzi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.company.blumeSunzi.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_flower_list"
        android:name="com.company.blumeSunzi.ui.flower_list.FlowerListFragment"
        android:label="@string/menu_flower_list"
        tools:layout="@layout/fragment_flower_list" />
    <fragment
        android:id="@+id/nav_flower_detail"
        android:name="com.company.blumeSunzi.ui.flower_detail.FlowerDetailFragment"
        android:label="@string/menu_flower_detail"
        tools:layout="@layout/fragment_flower_detail" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.company.blumeSunzi.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_view_orders"
        android:name="com.company.blumeSunzi.ui.view_orders.ViewOrdersFragment"
        android:label="@string/menu_view_orders"
        tools:layout="@layout/fragment_view_orders" />
</navigation>